--- a/README.org
+++ b/README.org
@@ -267,7 +267,7 @@ void oled_task_user(void) {
         oled_write_ln(leader_display_str(), false); \
     }                                               \
     else {                                          \
-        // prevent it from ever looping around      \
+        /* prevent it from ever looping around */   \
         timer = timer_read() - 200;                 \
         oled_write_ln("", false);                   \
     }                                               \
